--- a/BlazorAlumnos/Client/Shared/NavMenu.razor
+++ b/BlazorAlumnos/Client/Shared/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Alumnos
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="materias">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Materias
+            </NavLink>
+        </div>
     </nav>
 </div>
 
