Se agrego "Materias" a la migracion y se cambio el InputText a InputNumber a Materia razor

--- a/BlazorAlumnos/Client/Pages/Materias/Materia.razor
+++ b/BlazorAlumnos/Client/Pages/Materias/Materia.razor
@@ -14,7 +14,7 @@
     <div class="col-lg-12">
         <div class="mb-3">
             <label class="form-label">Id</label>
-            <InputText id="Id" class="form-control" @bind-Value="@materia.Id" />
+            <InputNumber id="Id" class="form-control" @bind-Value="@materia.Id" />
             <ValidationMessage For="@(() => materia.Id)" />
         </div>
     </div>
