--- a/BlazorAlumnos/Client/Pages/Materias/Materias.razor
+++ b/BlazorAlumnos/Client/Pages/Materias/Materias.razor
@@ -18,7 +18,7 @@
 }
 else if (materias.Count == 0)
 {
-    <h1>No se encontraron alumnos registrados...</h1>
+    <h1>No se encontraron Materias registradas...</h1>
 }
 else
 {
